# gerenciador-livros

./: Dockerfile  README.md  db.db  docker-compose.yaml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 1b948a2d79b3_cria_tabela_de_autor.py  22c706bd729d_adiciona_data_de_publicação_no_model_do_.py  6310ed06ddc1_adiciona_data_de_publicação_na_tabela_.py  66d71de93456_cria_tabela_de_livros.py
src/gerenciador_livros/: __about__.py  app.py  database.py  models.py
src/gerenciador_livros/routers/: autores.py  livros.py
src/gerenciador_livros/templates/: index.html  layout.html  layout.html.jinja
src/gerenciador_livros/templates/autores/: options.html  options.html.jinja
src/gerenciador_livros/templates/livros/: criacao.html  criacao.html.jinja  detalhes.html  detalhes.html.jinja  edicao.html.jinja  index.html  index.html.jinja  lista.html  lista.html.jinja  tabela.html  tabela.html.jinja
tests/: conftest.py  factories.py  test_app.py  test_autores.py  test_livros.py
