[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gerenciador-livros"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12.2"
license = "MIT"
keywords = []
authors = [
  { name = "Jhonata Caio", email = "jhonatacaiob@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  'fastapi==0.111.0',
  'sqlmodel==0.0.18',
  'SQLAlchemy==2.0.30',
  'alembic==1.13.1',
]

[project.urls]
Documentation = "https://github.com/jhonatacaiob/gerenciador-livros#readme"
Issues = "https://github.com/jhonatacaiob/gerenciador-livros/issues"
Source = "https://github.com/jhonatacaiob/gerenciador-livros"

[tool.hatch.version]
path = "src/gerenciador_livros/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gerenciador_livros tests}"

[tool.coverage.run]
source_pkgs = ["gerenciador_livros", "tests"]
branch = true
parallel = true
omit = [
  "src/gerenciador_livros/__about__.py",
]

[tool.coverage.paths]
gerenciador_livros = ["src/gerenciador_livros", "*/gerenciador-livros/src/gerenciador_livros"]
tests = ["tests", "*/gerenciador-livros/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
